# packages/schema/src/schema.ts
@@ -13,3 +13,9 @@ export const userSchema = v.object({
 export const userRequestSchema = v.object({
   name: v.string(),
 });
+export const scenarioRequestSchema = v.object({
+  id: v.string(),
+  title: v.string(),
+  overview: v.string(),
+  tags: v.array(v.string()),
+});
